feat: darkmode (still todo some stuff)

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     />
     <title>Fincheck - Suas finanças pessoais</title>
   </head>
-  <body class="h-full bg-gray-0">
+  <body class="h-full bg-gray-0 dark:bg-gray-800 select-none">
     <div id="root" class="h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
